# ros2ws

./: README.md  release_notes  version_info.json  version_info.txt
data/speech/builtin/: run.sh
examples/: finger_slider.py  head_slider.py  headwaist_slider.py  manual_debug.bash  remote2.py  test_topics.py
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/audio/scripts/: deinit.sh  deploy.sh  init.sh  sbus_audio.service
install/body_control/share/dev_inspire_hand/: package.dsv  package.xml
install/body_control/share/dev_inspire_hand/cmake/: dev_inspire_handConfig.cmake
install/diagnose/lib/: libiw.so.29  libwebsockets.so.19
install/lyre_msgs/: CASES.md  README.md
install/monitor_msgs/share/monitor_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/monitor_msgs/share/monitor_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_monitor_msgs__rosidl_generator_cExport-noconfig.cmake  export_monitor_msgs__rosidl_generator_cExport.cmake  export_monitor_msgs__rosidl_generator_cppExport.cmake  export_monitor_msgs__rosidl_generator_pyExport-noconfig.cmake  export_monitor_msgs__rosidl_generator_pyExport.cmake  export_monitor_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_monitor_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_monitor_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_monitor_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  monitor_msgsConfig.cmake  monitor_msgs__rosidl_typesupport_cExport-noconfig.cmake  monitor_msgs__rosidl_typesupport_cExport.cmake  monitor_msgs__rosidl_typesupport_cppExport-noconfig.cmake  monitor_msgs__rosidl_typesupport_cppExport.cmake  monitor_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  monitor_msgs__rosidl_typesupport_introspection_cExport.cmake  monitor_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  monitor_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/monitor_msgs/share/monitor_msgs/msg/: ProcCpuData.idl  ProcCpuData.msg  ProcData.idl  ProcData.msg  ProcDatas.idl  ProcDatas.msg  ProcIoData.idl  ProcIoData.msg  ProcMemData.idl  ProcMemData.msg  SysCpuData.idl  SysCpuData.msg  SysCpuDatas.idl  SysCpuDatas.msg  SysIoData.idl  SysIoData.msg  SysMemData.idl  SysMemData.msg
install/rl_control/share/rl_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  rlctrl_plugin.xml
install/rl_control/share/rl_control/cmake/: ament_cmake_export_dependencies-extras.cmake  rl_controlConfig.cmake
install/rl_control/share/rl_control/launch/: rl.py
install/robot_action/: readme.md  run.sh
install/usb_sbus/share/usb_sbus/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/usb_sbus/share/usb_sbus/cmake/: usb_sbusConfig.cmake
install/usb_sbus/share/usb_sbus/launch/: usb_sbus.launch.py
install/usb_sbus/share/usb_sbus/param/: config.yaml
install/xsys/share/xsys/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/xsys/share/xsys/cmake/: ament_cmake_export_targets-extras.cmake  export_xsys_componentExport-noconfig.cmake  export_xsys_componentExport.cmake  xsysConfig.cmake
install/xsys/share/xsys/launch/: xsys.launch.py
install/xsys_msgs/: README.md
log/: latest_build
scripts/: dbus-xhumanoid.conf  dds_profile_41_1.xml  dds_profile_41_2.xml  dds_profile_41_3.xml  dds_profile_default.xml  diagnose_ros_env.sh  head_slider.py  install_service.bash  proc_manager.service  proc_manager.txt  ros2_config.txt  ros2_config_orin.txt  ros2_config_x86.txt  ros2_remote_explorer.py  ros2_setup.bash  ros2_setup_orin.bash  ros2_setup_x86.bash  start_rl.bash  startup_proc_manager.bash
(+2374 files in other folders)
