<?xml version="1.0"?>
<package format="3">
  <name>monitor_msgs</name>
  <version>0.1.0</version>
  <description>A simple ROS2 package demonstrating Publisher and Subscriber nodes.</description>
  <maintainer email="leolin@x-humanoid.com">LeoLin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
