<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rl_control</name>
  <version>0.0.0</version>
  <description>The rl_control package</description>
  <maintainer email="jack@todo.todo">jack</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>bodyctrl_msgs</depend>
  <depend>hric_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>