<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xsys</name>
  <version>0.0.1</version>
  <description>Xhumanoid system package</description>
  <maintainer email="robin.yue@x-humanoid.com">Robin Yue</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>xsys_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>